properly validate validation information