@@ -23,6 +23,7 @@ import java.util.Optional;
 
 import org.apache.commons.csv.CSVRecord;
 import org.eclipse.nebula.widgets.nattable.layer.ILayer;
+import org.eclipse.set.basis.Pair;
 import org.eclipse.set.swtbot.table.AbstractTableTest;
 import org.eclipse.set.swtbot.table.TestFailHandle;
 import org.eclipse.set.swtbot.utils.AbstractSWTBotTest;
@@ -44,6 +45,19 @@ import org.junit.jupiter.api.extension.ExtensionContext;
  */
 @TestInstance(Lifecycle.PER_CLASS)
 public class ValidationViewTest extends AbstractTableTest {
+	static List<Pair<String, String>> widgetItems = Arrays
+			.<Pair<String, String>> asList(new Pair<>("Geladene Datei", "MD5"),
+					new Pair<>("Geladene Datei", "GUID"),
+					new Pair<>("Verwendetes XML-Schema (in Datei)", "PlanPro"),
+					new Pair<>("Verwendetes XML-Schema (in Datei)", "Signalbegriffe"),
+					new Pair<>("Unterstütztes XML-Schema", "PlanPro"),
+					new Pair<>("Unterstütztes XML-Schema", "Signalbegriffe"),
+					new Pair<>("Gültigkeit", "XSD-Gültigkeit"),
+					new Pair<>("Gültigkeit", "EMF-Gültigkeit"),
+					new Pair<>("Gültigkeit", "Verarbeitbar"),
+					new Pair<>("PlanPro-Container", "Enthalten"),
+					new Pair<>("Untergewerke", "Enthalten"));
+	
 	private static class ValidationViewFailHandle extends TestFailHandle {
 		String csvHeader = "\"Item Group\";\"Item label\";\"Expect Value\""
 				+ System.lineSeparator();
@@ -54,8 +68,8 @@ public class ValidationViewTest extends AbstractTableTest {
 			final Optional<Object> testInstance = context.getTestInstance();
 			if (testInstance.isPresent() && testInstance
 					.get() instanceof final ValidationViewTest tableTest) {
-				exportWidgeValue(tableTest);
 				tableTest.tableName = VALIDATION_INFORMATION_CSV;
+				exportWidgeValue(tableTest);
 				exportReferenceCSV(tableTest);
 				tableTest.tableName = VALIDATION_TABLE_NAME;
 			}
@@ -64,10 +78,9 @@ public class ValidationViewTest extends AbstractTableTest {
 		private void exportWidgeValue(final ValidationViewTest testInstance) {
 
 			final List<String> currentValues = new ArrayList<>();
-			final List<CSVRecord> referenceFile = testInstance.informationReference;
-			for (int i = 1; i < referenceFile.size(); i++) {
-				final String itemGroup = referenceFile.get(i).get(0);
-				final String itemLabel = referenceFile.get(i).get(1);
+			for (int i = 0; i < widgetItems.size(); i++) {
+				final String itemGroup = widgetItems.get(i).getFirst();
+				final String itemLabel = widgetItems.get(i).getSecond();
 				final SWTBotText currentValue = AbstractSWTBotTest.bot
 						.textWithLabelInGroup(itemLabel, itemGroup);
 				final String csvEntry = String.format("\"%s\";\"%s\";\"%s\"",
@@ -178,10 +191,10 @@ public class ValidationViewTest extends AbstractTableTest {
 	}
 
 	protected void thenExpectModelInformationEquals() {
-		for (int i = 1; i < informationReference.size(); i++) {
-			final String group = informationReference.get(i).get(0);
-			final String item = informationReference.get(i).get(1);
-			final String value = informationReference.get(i).get(2);
+		for (int i = 0; i < widgetItems.size(); i++) {
+			final String group = widgetItems.get(i).getFirst();
+			final String item = widgetItems.get(i).getSecond();
+			final String value = informationReference.get(i + 1).get(2);
 			expectTextWidgetAreSame(value, item, group);
 		}
 	}
